Rewrote the FileTree by a more complete mapping of the file tree, to be able to deal with specific errors that the tests found